[package]
name = "csrs"
version = "0.1.1-dev"
authors = ["Sambo Chea <sombochea@cubetiqs.com>"]
edition = "2018"
description = "CUBETIQ Syncer for database tools and internal tool for the team in the company."
license = "MIT"
repository = "https://github.com/CUBETIQ/csrs.git"
keywords = ["rust-cli", "cubetiq-cli", "tools", "clap"]
categories = ["cli", "tools"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"